# tempo-mcp

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/skills/: reviewer  staff-review
.github/workflows/: ci.yml
docs/: design.md
evals/: harness.py  pyproject.toml  requirements.txt  run_eval.py  scoring.py  test_scoring.py
evals/scenarios/: 01_simple.json  02_dense.json  03_recurring.json  04_multi_calendar.json  05_constraints.json  06_real_world.json  07_pick_from_options.json
src/: error.rs  ical_bridge.rs  main.rs
src/calendar/: event.rs  mod.rs  proposal.rs  time_utils.rs
src/server/: conversions.rs  mod.rs  types.rs
