[package]
name = "tempo-mcp"
version = "0.1.0"
edition = "2021"
description = "Lightweight in-memory calendar MCP server for LLM scheduling workflows"

[dependencies]
rmcp = { version = "0.8", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["chrono04", "uuid1"] }
icalendar = { version = "0.16", features = ["parser"] }
rrule = "0.13"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"

[dev-dependencies]
pretty_assertions = "1"
